--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -16,3 +16,8 @@ button {display: block; width: 100%;}
     -webkit-box-shadow: -1px -1px 5px 24px rgba(0,0,0,0.12);
     -moz-box-shadow: -1px -1px 5px 24px rgba(0,0,0,0.12);
 }
+
+.max-width{max-width: 25%;}
+@media screen and (max-width: 779px) {
+    .max-width{max-width: 100%;}
+}
