--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -36,3 +36,11 @@ button {
   -webkit-box-shadow: -1px -1px 5px 24px rgba(0, 0, 0, 0.12);
   -moz-box-shadow: -1px -1px 5px 24px rgba(0, 0, 0, 0.12);
 }
+
+.max-width {
+  max-width: 25%;
+}
+
+@media screen and (max-width: 779px) {
+  .max-width{max-width: 100%;}
+}
