--- a/client/src/css/Cart/Cart.css
+++ b/client/src/css/Cart/Cart.css
@@ -15,6 +15,13 @@
   max-width: 150px;
 }
 
+.cart-total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+}
+
 @media screen and (max-width: 779px) {
   .margint-top {
     margin: 0 0 10px;
