--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -17,7 +17,7 @@ button {display: block; width: 100%;}
     -moz-box-shadow: -1px -1px 5px 24px rgba(0,0,0,0.12);
 }
 
-.max-width{max-width: 25%;}
+.max-width-colm{max-width: 25%;}
 @media screen and (max-width: 779px) {
-    .max-width{max-width: 100%;}
+    .max-width-colm{max-width: 100%;}
 }
